--- a/index.html
+++ b/index.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WDD 131</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Eloy Martinez. HTML, CSS, JavaScript fundamentals and responsive web design.">
+  <meta name="author" content="Eloy Martinez">
+  <title>WDD 131 – Dynamic Web Fundamentals – Eloy Francisco Martinez Cabello</title>
+
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles/base.css">
+
+  <!-- JavaScript -->
+  <script src="scripts/getdates.js" defer></script>
 </head>
+
 <body>
-  <h1>WDD 131 - Eloy</h1>
+  <header>
+    <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
+
+    <nav class="navigation">
+      <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://byupw.instructure.com/" target="_blank" rel="noopener noreferrer">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank" rel="noopener noreferrer">Scripture</a>
+      <a href="#">Final Project</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Eloy Martinez</h1>
+
+    <section class="card">
+      <h2>About Me</h2>
+      <img src="images/profile.webp" alt="Profile image">
+      <p>
+        I am an engineering student with experience in software and web development.
+        I enjoy learning new technologies and building practical digital solutions.
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Web Development</h2>
+      <img src="images/web.webp" alt="Web development illustration">
+      <p>
+        This course focuses on HTML, CSS, and JavaScript to build dynamic,
+        responsive, and accessible websites following best practices.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      © <span id="currentyear"></span> Eloy Martinez – Brazil
+    </p>
+    <p id="lastModified"></p>
+  </footer>
 </body>
 </html>
