--- a/temples.html
+++ b/temples.html
@@ -33,15 +33,15 @@
     <main>
         <h1>Temple Gallery</h1>
         <div class="grid-container">
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/salt-lake-temple/400x250/salt-lake-temple-766448.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/manti-utah-temple/400x250/manti-temple-766302.jpg" alt="Manti Utah Temple"><figcaption>Manti Utah Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/logan-utah-temple/400x250/logan-temple-766314.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/laie-hawaii-temple/400x250/laie-temple-772732.jpg" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/cardston-alberta-temple/400x250/cardston-alberta-temple-772731.jpg" alt="Cardston Alberta Temple"><figcaption>Cardston Alberta Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/mesa-arizona-temple/400x250/mesa-arizona-temple-772733.jpg" alt="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/idaho-falls-idaho-temple/400x250/idaho-falls-temple-766312.jpg" alt="Idaho Falls Idaho Temple"><figcaption>Idaho Falls Idaho Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/berne-switzerland-temple/400x250/berne-switzerland-temple-766304.jpg" alt="Berne Switzerland Temple"><figcaption>Berne Switzerland Temple</figcaption></figure>
-            <figure><img src="https://content.churchofjesuschrist.org/temples/photo-galleries/los-angeles-california-temple/400x250/los-angeles-temple-766309.jpg" alt="Los Angeles California Temple"><figcaption>Los Angeles California Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/92c33bcbf9cf85483e008d6871f8ced5f6d7b661/full/500%2C/0/default" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/d9c313eb96c173d0ad32f21f461ce994129c9e8d/full/500%2C/0/default" alt="Manti Utah Temple"><figcaption>Manti Utah Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/54ac3388abacb11ef04678697a2fc2b6aa0ac4f5/full/500%2C/0/default" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/809f567ccf240d2f1c8e457e8c81fbd94ef96759/full/500%2C/0/default" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/ebdc56cba8bb11eda23ceeeeac1e7e543b91e9b4/full/500%2C/0/default" alt="Cardston Alberta Temple"><figcaption>Cardston Alberta Temple</figcaption></figure>
+            <figure><img src="https://churchofjesuschrist.org/imgs/a338f9b0e582f23025658041e5a617029c9be50f/full/500%2C/0/default" alt="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/c5c1115d68bb7c292e1cc60ee39f2e6b406ad70b/full/500%2C/0/default" alt="Idaho Falls Idaho Temple"><figcaption>Idaho Falls Idaho Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/a2c415301c7991e2e10059b5ec588a28785917b0/full/500%2C/0/default" alt="Berne Switzerland Temple"><figcaption>Berne Switzerland Temple</figcaption></figure>
+            <figure><img src="https://www.churchofjesuschrist.org/imgs/f776300d2f59a0d25045f45d961c326a7ae080d8/full/500%2C/0/default" alt="Los Angeles California Temple"><figcaption>Los Angeles California Temple</figcaption></figure>
         </div>
     </main>
 
