--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles/temples.css"> 
-    <link rel="stylesheet" href="styles/filtered-temples-large.css" media="(min-width: 600px)">
+    <link rel="stylesheet" href="styles/filtered-temples-large.css">
     
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
